[gd_scene load_steps=12 format=3 uid="uid://bq08tk3xhyq5r"]

[ext_resource type="Texture2D" uid="uid://b6rxffhhkplj4" path="res://plugin/downloader_list/v1_0_0/ui/assets/delete.svg" id="1_dsq5b"]
[ext_resource type="Script" path="res://plugin/downloader_list/v1_0_0/ui/task_node.gd" id="1_npado"]
[ext_resource type="Texture2D" uid="uid://becc2mcqy8lot" path="res://plugin/downloader_list/v1_0_0/ui/assets/trash.svg" id="2_t12cb"]
[ext_resource type="Texture2D" uid="uid://lmdfm525xr7m" path="res://plugin/downloader_list/v1_0_0/ui/assets/task-active@2x.png" id="4_pr8jt"]
[ext_resource type="Texture2D" uid="uid://cj7cssdlx7am5" path="res://plugin/downloader_list/v1_0_0/ui/assets/task-waiting@2x.png" id="5_gwsnb"]
[ext_resource type="Texture2D" uid="uid://dpkf60uvoxe67" path="res://plugin/downloader_list/v1_0_0/ui/assets/folder.svg" id="6_2gn70"]
[ext_resource type="Texture2D" uid="uid://c2uoaise2yr2j" path="res://plugin/downloader_list/v1_0_0/ui/assets/link.svg" id="7_ytlpb"]
[ext_resource type="Texture2D" uid="uid://d1tqgq7pcw7kt" path="res://plugin/downloader_list/v1_0_0/ui/assets/info-circle.svg" id="8_57jqv"]
[ext_resource type="Texture2D" uid="uid://vf2iynyl2xdy" path="res://plugin/downloader_list/v1_0_0/ui/assets/arrow-up.svg" id="9_5imb6"]
[ext_resource type="Texture2D" uid="uid://blp6ltosd2wom" path="res://plugin/downloader_list/v1_0_0/ui/assets/arrow-down.svg" id="10_01m6n"]
[ext_resource type="Texture2D" uid="uid://dc3ve5j6rsmr" path="res://plugin/downloader_list/v1_0_0/ui/assets/node.svg" id="11_ugs72"]

[node name="TaskNode" type="PanelContainer"]
custom_minimum_size = Vector2(0, 200)
mouse_filter = 1
script = ExtResource("1_npado")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 80)
layout_mode = 2

[node name="FileName" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 6
mouse_filter = 1
text = "123123123123"

[node name="HBoxContainer4" type="HBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 10

[node name="CloseButton" type="TextureButton" parent="MarginContainer/VBoxContainer/HBoxContainer/HBoxContainer4"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
texture_normal = ExtResource("1_dsq5b")
ignore_texture_size = true
stretch_mode = 3

[node name="DeleteButton" type="TextureButton" parent="MarginContainer/VBoxContainer/HBoxContainer/HBoxContainer4"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
texture_normal = ExtResource("2_t12cb")
ignore_texture_size = true
stretch_mode = 3

[node name="StartButton" type="TextureButton" parent="MarginContainer/VBoxContainer/HBoxContainer/HBoxContainer4"]
unique_name_in_owner = true
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
toggle_mode = true
texture_normal = ExtResource("4_pr8jt")
texture_pressed = ExtResource("5_gwsnb")
ignore_texture_size = true
stretch_mode = 3

[node name="FolderButton" type="TextureButton" parent="MarginContainer/VBoxContainer/HBoxContainer/HBoxContainer4"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
texture_normal = ExtResource("6_2gn70")
ignore_texture_size = true
stretch_mode = 3

[node name="LinkButton" type="TextureButton" parent="MarginContainer/VBoxContainer/HBoxContainer/HBoxContainer4"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
texture_normal = ExtResource("7_ytlpb")
ignore_texture_size = true
stretch_mode = 3

[node name="InfoButton" type="TextureButton" parent="MarginContainer/VBoxContainer/HBoxContainer/HBoxContainer4"]
visible = false
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
texture_normal = ExtResource("8_57jqv")
ignore_texture_size = true
stretch_mode = 3

[node name="ProgressBar" type="ProgressBar" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
mouse_filter = 1
value = 20.0

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 2

[node name="DownloadSize" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer2/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
mouse_filter = 1
text = "123123123123"

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 8
theme_override_constants/separation = 10

[node name="HBoxContainer3" type="HBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer2/HBoxContainer2"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="MarginContainer/VBoxContainer/HBoxContainer2/HBoxContainer2/HBoxContainer3"]
custom_minimum_size = Vector2(20, 20)
layout_mode = 2
texture = ExtResource("9_5imb6")
expand_mode = 1
stretch_mode = 3

[node name="UploadSpeed" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer2/HBoxContainer2/HBoxContainer3"]
unique_name_in_owner = true
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
mouse_filter = 1
text = "123123123123"

[node name="HBoxContainer4" type="HBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer2/HBoxContainer2"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="MarginContainer/VBoxContainer/HBoxContainer2/HBoxContainer2/HBoxContainer4"]
custom_minimum_size = Vector2(20, 20)
layout_mode = 2
texture = ExtResource("10_01m6n")
expand_mode = 1
stretch_mode = 3

[node name="DownloadSpeed" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer2/HBoxContainer2/HBoxContainer4"]
unique_name_in_owner = true
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
mouse_filter = 1
text = "123123123123"

[node name="LeftTime" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer2/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
mouse_filter = 1
text = "123123123123"

[node name="HBoxContainer5" type="HBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer2/HBoxContainer2"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="MarginContainer/VBoxContainer/HBoxContainer2/HBoxContainer2/HBoxContainer5"]
custom_minimum_size = Vector2(20, 20)
layout_mode = 2
texture = ExtResource("11_ugs72")
expand_mode = 1
stretch_mode = 3

[node name="NodeNum" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer2/HBoxContainer2/HBoxContainer5"]
unique_name_in_owner = true
layout_mode = 2
mouse_filter = 1
text = "123123123123"

[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/HBoxContainer4/CloseButton" to="." method="_on_close_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/HBoxContainer4/DeleteButton" to="." method="_on_delete_button_pressed"]
[connection signal="toggled" from="MarginContainer/VBoxContainer/HBoxContainer/HBoxContainer4/StartButton" to="." method="_on_start_button_toggled"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/HBoxContainer4/FolderButton" to="." method="_on_folder_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/HBoxContainer4/LinkButton" to="." method="_on_link_button_pressed"]
